graylog/graylog_template.yaml
---
# Source: graylog/charts/elasticsearch/templates/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.2
    component: "client"
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-elasticsearch-client

spec:
  ports:
    - name: http
      port: 9200
      targetPort: http
  selector:
    app: elasticsearch
    component: "client"
    release: R31E@S3
  type: ClusterIP
---
# Source: graylog/charts/elasticsearch/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.2
    component: "master"
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-elasticsearch-discovery
spec:
  clusterIP: None
  ports:
    - port: 9300
      targetPort: transport
  selector:
    app: elasticsearch
    component: "master"
    release: R31E@S3
---
# Source: graylog/charts/mongodb-replicaset/templates/mongodb-service-client.yaml
# A headless service for client applications to use
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: mongodb-replicaset
    chart: mongodb-replicaset-3.11.2
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-mongodb-replicaset-client
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: mongodb
      port: 27017
  selector:
    app: mongodb-replicaset
    release: R31E@S3
---
# Source: graylog/charts/mongodb-replicaset/templates/mongodb-service.yaml
# A headless service to create DNS records for discovery purposes. Use the -client service to connect applications
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: mongodb-replicaset
    chart: mongodb-replicaset-3.11.2
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-mongodb-replicaset
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: mongodb
      port: 27017
  publishNotReadyAddresses: true
  selector:
    app: mongodb-replicaset
    release: R31E@S3
---
# Source: graylog/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: R31E@S3-graylog
  labels:
    helm.sh/chart: graylog-1.6.10
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.1"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - name: graylog
      port: 9000
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
---
# Source: graylog/templates/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: R31E@S3-graylog-master
  labels:
    helm.sh/chart: graylog-1.6.10
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.1"
    graylog-role: "master"
spec:
  ports:
    - name: graylog
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
    graylog-role: "master"
  type: "ClusterIP"
---
# Source: graylog/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: R31E@S3-graylog-web
  labels:
    helm.sh/chart: graylog-1.6.10
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.1"
    app.kubernetes.io/component: "web"
spec:
  ports:
    - name: graylog
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
  type: "LoadBalancer"
---
# Source: graylog/charts/elasticsearch/templates/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.2
    component: "client"
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-elasticsearch-client
spec:
  selector:
    matchLabels:
      app: elasticsearch
      component: "client"
      release: R31E@S3
  replicas: 2
  template:
    metadata:
      labels:
        app: elasticsearch
        component: "client"
        release: R31E@S3
      annotations:
        checksum/config: e07f3415e40651891b0ed4f053eb1a781a7adcf74b381cb292eb3a827aaddbf5
    spec:
      serviceAccountName: R31E@S3-elasticsearch-client
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: "elasticsearch"
                  release: "R31E@S3"
                  component: "client"
      containers:
      - name: elasticsearch
        resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 512Mi
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: 9200
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 90
        image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.5.4"
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          name: config
          subPath: elasticsearch.yml
      volumes:
      - name: config
        configMap:
          name: R31E@S3-elasticsearch
---
# Source: graylog/charts/elasticsearch/templates/data-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.2
    component: "data"
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-elasticsearch-data
spec:
  selector:
    matchLabels:
      app: elasticsearch
      component: "data"
      release: R31E@S3
      role: data
  serviceName: R31E@S3-elasticsearch-data
  replicas: 2
  template:
    metadata:
      labels:
        app: elasticsearch
        component: "data"
        release: R31E@S3
        role: data
    spec:
      serviceAccountName: R31E@S3-elasticsearch-data
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: "elasticsearch"
                  release: "R31E@S3"
                  component: "data"
      containers:
      - name: elasticsearch
        image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.5.4"
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 9300
          name: transport

        resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 1536Mi
        readinessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 5
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: data
        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          name: config
          subPath: elasticsearch.yml
        - name: config
          mountPath: /data-pre-stop-hook.sh
          subPath: data-pre-stop-hook.sh
        - name: config
          mountPath: /data-post-start-hook.sh
          subPath: data-post-start-hook.sh
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash","/data-pre-stop-hook.sh"]
          postStart:
            exec:
              command: ["/bin/bash","/data-post-start-hook.sh"]
      terminationGracePeriodSeconds: 3600
      volumes:
      - name: config
        configMap:
          name: R31E@S3-elasticsearch
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      storageClassName: "St0r3@g3C1@ss"
      resources:
        requests:
          storage: "E1@st1cD@t@St0r@g3"
---
# Source: graylog/charts/elasticsearch/templates/master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
    chart: elasticsearch-1.32.2
    component: "master"
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-elasticsearch-master
spec:
  selector:
    matchLabels:
      app: elasticsearch
      component: "master"
      release: R31E@S3
      role: master
  serviceName: R31E@S3-elasticsearch-master
  replicas: 3
  template:
    metadata:
      labels:
        app: elasticsearch
        component: "master"
        release: R31E@S3
        role: master
    spec:
      serviceAccountName: R31E@S3-elasticsearch-master
      securityContext:
        fsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: "elasticsearch"
                  release: "R31E@S3"
                  component: "master"
      containers:
      - name: elasticsearch
        resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 512Mi
        readinessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 5
        image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.5.4"
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 9300
          name: transport

        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: data
        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          name: config
          subPath: elasticsearch.yml
      volumes:
      - name: config
        configMap:
          name: R31E@S3-elasticsearch
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      storageClassName: "St0r3@g3C1@ss"
      resources:
        requests:
          storage: "E1@st1cM@st3rSt0r@g3"
---
# Source: graylog/charts/mongodb-replicaset/templates/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mongodb-replicaset
    chart: mongodb-replicaset-3.11.2
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-mongodb-replicaset
spec:
  selector:
    matchLabels:
      app: mongodb-replicaset
      release: R31E@S3
  serviceName: R31E@S3-mongodb-replicaset
  replicas: 3
  template:
    metadata:
      labels:
        app: mongodb-replicaset
        release: R31E@S3
      annotations:
        checksum/config: e2b9d527f49227f7896c6e51ec4263cfa8186ae966231beb4f23ea1b50cf35cb
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
        runAsNonRoot: true
      terminationGracePeriodSeconds: 30
      containers:
        - name: mongodb-replicaset
          image: "mongo:3.6"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mongodb
              containerPort: 27017
          resources:
            {}
          command:
            - mongod
          args:
            - --config=/data/configdb/mongod.conf
            - --dbpath=/data/db
            - --replSet=rs0
            - --port=27017
            - --bind_ip=0.0.0.0
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
          volumeMounts:
            - name: datadir
              mountPath: /data/db
            - name: configdir
              mountPath: /data/configdb
            - name: workdir
              mountPath: /work-dir

      volumes:
        - name: config
          configMap:
            name: R31E@S3-mongodb-replicaset-mongodb
        - name: init
          configMap:
            defaultMode: 0755
            name: R31E@S3-mongodb-replicaset-init
        - name: workdir
          emptyDir: {}
        - name: configdir
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: datadir
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: "St0r3@g3C1@ss"
        resources:
          requests:
            storage: "M0ng0DBSt0r@g3S1z3"
---
# Source: graylog/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: R31E@S3-graylog
  labels:
    helm.sh/chart: graylog-1.6.10
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.1"
spec:
  serviceName: R31E@S3-graylog
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: graylog
      app.kubernetes.io/instance: "R31E@S3"
      app.kubernetes.io/managed-by: "Helm"
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: graylog-1.6.10
        app.kubernetes.io/name: graylog
        app.kubernetes.io/instance: "R31E@S3"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/version: "3.1"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
    spec:
      serviceAccountName: R31E@S3-graylog
      containers:
        - name: graylog-server
          image: "graylog/graylog:3.1"
          imagePullPolicy: "IfNotPresent"
          command:
            - /entrypoint.sh
          securityContext:
            privileged: false
          ports:
            - containerPort: 9000
              name: graylog
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 500m
              memory: 1024Mi
          livenessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - name: journal
              mountPath: /usr/share/graylog/data/journal
            - name: config
              mountPath: /usr/share/graylog/config
            - name: entrypoint
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubectl
              mountPath: /k8s
          lifecycle:
            preStop:
              exec:
                command:
                  - bash
                  - -ec
                  - |
                    curl  -XPOST -sS \
                      -u "admin:${GRAYLOG_PASSWORD_SECRET}" \
                      -H "X-Requested-By: R31E@S3-graylog" \
                      http://localhost:9000/api/system/shutdown/shutdown
      terminationGracePeriodSeconds: 120
      volumes:
        - name: config
          configMap:
            name: R31E@S3-graylog
            items:
              - key: graylog.conf
                path: graylog.conf
                mode: 292 # 0444
              - key: log4j2.xml
                path: log4j2.xml
                mode: 292 # 0444
        - name: entrypoint
          configMap:
            name: R31E@S3-graylog
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
                mode: 365 # 0555
        - name: kubectl
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: journal
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: "St0r3@g3C1@ss"
        resources:
          requests:
            storage: "Gr@yL0gStor@g3"
---
# Source: graylog/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
  labels:
    helm.sh/chart: graylog-1.6.10
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "R31E@S3"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.1"
    app.kubernetes.io/component: "web"
  name: R31E@S3-graylog-web
spec:
  rules:
    - host: Ingr3ssH0stN@m3
      http:
        paths:
          
          - backend:
              serviceName: R31E@S3-graylog-web
              servicePort: graylog
---
# Source: graylog/charts/elasticsearch/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: R31E@S3-elasticsearch-test
  labels:
    app: R31E@S3-elasticsearch
    chart: "elasticsearch-1.32.2"
    heritage: "Helm"
    release: "R31E@S3"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: R31E@S3-test
      image: "dduportal/bats:0.4.0"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: R31E@S3-elasticsearch-test
  - name: tools
    emptyDir: {}
  restartPolicy: Never
---
# Source: graylog/charts/mongodb-replicaset/templates/tests/mongodb-up-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mongodb-replicaset
    chart: mongodb-replicaset-3.11.2
    heritage: Helm
    release: R31E@S3
  name: R31E@S3-mongodb-replicaset-test
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: mongo
      image: "mongo:3.6"
      command:
        - /tools/bats/bats
        - -t
        - /tests/mongodb-up-test.sh
      volumeMounts:
        - name: tools
          mountPath: /tools
        - name: tests
          mountPath: /tests
  volumes:
    - name: tools
      emptyDir: {}
    - name: tests
      configMap:
        name: R31E@S3-mongodb-replicaset-tests
  restartPolicy: Never
